--- a/css/style.css
+++ b/css/style.css
@@ -674,7 +674,7 @@ input[type=date]::-webkit-clear-button
 /*Homepage*/
 
 .cover-bg-1{background-image:url(../images/covers/kawin2.png);}
-.cover-bg-2{background-image:url(images/covers/kawin2.jpg);}
+.cover-bg-2{background-image:url(../images/covers/kawin2.png);}
 /* .cover-bg-2 .cover-overlay{background-color:rgba(0,0,0,0.85);} */
 
 .cover-class{
