--- a/css/style.css
+++ b/css/style.css
@@ -679,9 +679,17 @@ input[type=date]::-webkit-clear-button
 
 .cover-class{
 	background-size:cover;
+	 background-repeat: no-repeat;
 	background-position:center center;
 	height:90vh;
-	border-bottom:solid 1px rgba(255,255,255,0.05);
+	/* border-bottom:solid 1px rgba(255,255,255,0.05); */
+}
+.cover-class2{
+	background-size:contain;
+	 background-repeat: no-repeat;
+	background-position:center center;
+	height:90vh;
+	/* border-bottom:solid 1px rgba(255,255,255,0.05); */
 }
 
 .cover-overlay{
@@ -793,7 +801,7 @@ input[type=date]::-webkit-clear-button
 .home-bar-3-icons a{width:33.3%;}
 .home-bar-4-icons a{width:25%;}
 
-.home-bar a{
+/* .home-bar a{
 	float:left;
 	height:	line-height:60px;
 	line-height:60px;
@@ -802,7 +810,7 @@ input[type=date]::-webkit-clear-button
 	font-weight:800;
 	text-transform:uppercase;
 	font-size:11px;
-}
+} */
 
 .home-bar a i{
 	display:block;
