--- a/css/style.css
+++ b/css/style.css
@@ -1633,3 +1633,103 @@ amp-social-share[type="sms"]:before{content: "\f075 ";}
     margin: 4px 2px;
     cursor: pointer;
   }
+
+  .calendarcontainer {
+	margin: 0;
+	padding: 0;
+  }
+  
+  .calendartop {
+	width: 100%;
+	height: 50px;
+	background-color: #be0909;
+	position: relative;
+	border-radius: 10px 10px 0 0;
+  }
+  
+  .calendartoptext {
+	margin: 0;
+	padding: 0;
+	position: relative;
+	font-family: 'Quicksand', sans-serif;
+	font-weight: 800;
+	color: #ffffff;
+	text-align: center;
+	font-size: 20px;
+	top: 50%;
+	transform: translateY(-50%)
+  }
+  
+  .calendarbottom {
+	width: 100%;
+	text-align: center;
+	height: 100px;
+	background-color: #fac3c3;
+	position: relative;
+	border-radius: 0 0 10px 10px;
+	padding-bottom: 10px;
+  }
+  
+  .calendarbottomtext {
+	margin: 0;
+	padding: 0;
+	font-family: 'Brush Script MT',' Brush Script Std', cursive;
+	font-style: bold;
+	color: #2d3436;
+	font-size: 50px;
+	position: relative;
+	top: 50%;
+	transform: translateY(-50%);
+  }
+	  
+	  
+  .Nav_but {
+	  font-family: 'Quicksand', sans-serif;
+	  text-align: center;
+	  font-weight: 800;
+  }
+
+  .imgcenter {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+  }
+
+  .gridcontainer {
+    display: grid;
+    grid-template-columns: 65% auto auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+	}
+
+	.gridname {
+		font-family: 'Quicksand', sans-serif;
+		font-weight: 500;
+		margin: auto;
+		width: 90%;
+		font-size: 15px;
+		color: #ffffff;
+		text-align: center;
+		background-color: #000000;
+		border-radius: 10px;
+		padding: 10px;
+		line-height: 1em;
+	}
+
+	.griditem {
+		margin: auto;
+		color: #ffffff;
+		padding: 5px;
+	}
+
+	.gridcontainer2 {
+		display: grid;
+		grid-template-columns: 50% 50%;
+		padding-bottom: 30px;
+		padding-top: 20px;
+	}
+
+	.griditem2 {
+		margin: auto;
+	}
