--- a/css/style.css
+++ b/css/style.css
@@ -1783,5 +1783,52 @@ amp-social-share[type="sms"]:before{content: "\f075 ";}
 		display: none;
 	}
 
+	#timer {
+		font-size: 3em;
+		font-weight: 100;
+		color: black;
+		text-shadow: 0 0 20px #48c8ff;
+	  }
+	   
+	  #timer div {
+		display: inline-block;
+		min-width: 90px;
+	  }
+	   
+	  #timer div span {
+		color: black;
+		display: block;
+		font-size: 0.35em;
+		font-weight: 400;
+	  }
+
+	  .outside {
+		position: relative;
+		  width: 70vmin;
+		  height: 70vmin;
+		  background: rgb(238, 171, 47);
+		  -webkit-clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
+	  clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
+	  }
+	  
+	  .inside {
+		position: absolute;
+		top: 10px;
+		left: 10px;
+		right: 10px;
+		bottom: 10px;
+		background: white;
+		-webkit-clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
+		clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
+		
+	  }
+	  
+	  .timer-countdown {
+		  display: flex;
+		  justify-content: center;
+		  align-items: center;
+		background: white;
+	  }
+
 	
 	
