--- a/css/style.css
+++ b/css/style.css
@@ -692,6 +692,14 @@ input[type=date]::-webkit-clear-button
 	/* border-bottom:solid 1px rgba(255,255,255,0.05); */
 }
 
+.cover-class3{
+	background-size:cover;
+	 background-repeat: no-repeat;
+	background-position:center center;
+	height: 50vh;	
+	/* border-bottom:solid 1px rgba(255,255,255,0.05); */
+}
+
 .cover-overlay{
 	position:absolute;
 	top:0px;
