--- a/css/style.css
+++ b/css/style.css
@@ -2603,7 +2603,7 @@ body {
 
 .hari {
   font-family: "Niconne";
-  font-size: 30px;
-  color: #faa307;
+  font-size: 40px;
+  color: #845b24;
   text-align: center;
 }
